# My-Brain

./: README.md  pyproject.toml
app/: crew.py  deploy.py  entrypoint.sh  ollama.py  stable_diffusion_xl.py
app/agents/: note_agent.py
app/common/: __init__.py
app/crews/: note_taking_crew.py
app/tasks/: note_taking_tasks.py
